Added a lot of features; separated custom memory lib from cheat